# thetadata_terminal_gui

./: .gitignore  Cargo.toml  README.md
download/v0.1/: ThetaData Terminal GUI-1.dmg  ThetaData Terminal GUI.dmg  ThetaData Terminal GUI.dmg.dmg
download/v0.1/ThetaData Terminal GUI.app/Contents/: Info.plist
download/v0.1/ThetaData Terminal GUI.app/Contents/Resources/: ThetaData Terminal GUI.icns
src/: main.rs  model.rs
src/app/: mod.rs  tabs.rs
