[package]
name = "thetadata_terminal_gui_wrapper"
version = "0.2.0"
authors = ["veppy"]
edition = "2021"

[dependencies]
eframe = "0.22.0"                                          # egui framework for native apps
keyring = "1.2.0"                                          # Secure credential storage
rfd = "0.10.0"                                             # File picker dialog
confy = "0.5.1"                                            # Simple app configuration
serde = { version = "1.0", features = ["derive"] }
image = "0.24.5"                                           # For loading png/jpg icons
iced = { version = "0.13", features = ["tokio", "debug"] }
native-dialog = "0.6"
clipboard = "0.5"
encoding_rs = "0.8.31"                                     # For decoding non-UTF8 config files

[package.metadata.bundle]
name = "ThetaData Terminal GUI"
identifier = "com.veppy.thetadata_terminal_gui"
icon = ["./resources/Mac_App_Icon.png"]

[package.metadata.bundle.windows]
icon = ["./resources/Win_App_Icon.png"]
